# optimus-be/api/docs/swagger.json
@@ -4488,6 +4488,42 @@
                 }
             }
         },
+        "/observability/query-sources": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "tags": [
+                    "observability"
+                ],
+                "summary": "List minimal data sources available for metric queries",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/optimus-be_internal_infra_response.Envelope"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/internal_modules_observability_query.QuerySource"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/permissions": {
             "get": {
                 "security": [
@@ -6537,6 +6573,9 @@
                 "name": {
                     "type": "string"
                 },
+                "regex": {
+                    "type": "boolean"
+                },
                 "required": {
                     "type": "boolean"
                 }
@@ -6988,6 +7027,20 @@
                     "type": "string"
                 },
                 "ref_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_modules_observability_query.QuerySource": {
+            "type": "object",
+            "properties": {
+                "cluster_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
                     "type": "string"
                 }
             }
